Add cards and styling

--- a/index.html
+++ b/index.html
@@ -34,26 +34,82 @@
 		</div>
 		<div class="spaceer"></div>
 		<div class="projects projects-col1">
-			<div class="header">A</div>
-			<div class="projects">B</div>
-			<div class="projects">C</div>
-			<div class="footer">D</div>
+			<div class="header"></div>
+			<div class="project-card-wrapper">
+				<div class="project-card">
+					<div class="front">
+						<p>Card One Front</p>
+					</div>
+					<div class="back">
+						<p>Card One Back</p>
+					</div>
+				</div>
+			</div>
+			<div class="project-card-wrapper">
+				<div class="project-card">
+					<div class="front">
+						<p>Card Four Front</p>
+					</div>
+					<div class="back">
+						<p>Card Four Back</p>
+					</div>
+				</div>
+			</div>
+			<div class="footer"></div>
 		</div>
 		<div class="projects projects-col2">
-			<div class="header">A</div>
-			<div class="projects">B</div>
-			<div class="projects">C</div>
-			<div class="footer">D</div>
+			<div class="header"><h1 class="projects-header">Projects</h1></div>
+			<div class="project-card-wrapper">
+				<div class="project-card">
+					<div class="front">
+						<div class="top-img"></div>
+						<div class="bottom-text">
+							<p>Card Two Front</p>
+						</div>
+					</div>
+					<div class="back">
+						<p>Card Two Back</p>
+					</div>
+				</div>
+			</div>
+			<div class="project-card-wrapper">
+				<div class="project-card">
+					<div class="front">
+						<p>Card Five Front</p>
+					</div>
+					<div class="back">
+						<p>Card Five Back</p>
+					</div>
+				</div>
+			</div>
+			<div class="footer"><p class="copyright-footer">Chris Fiorino <i class="fa fa-copyright" aria-hidden="true"></i> 2018</p>
+			</div>
 		</div>
 		<div class="projects projects-col3">
-			<div class="header">A</div>
-			<div class="projects">B</div>
-			<div class="projects">C</div>
-			<div class="footer">D</div>
+			<div class="header"></div>
+			<div class="project-card-wrapper">
+				<div class="project-card">
+					<div class="front">
+						<p>Card Three Front</p>
+					</div>
+					<div class="back">
+						<p>Card Three Back</p>
+					</div>
+				</div>
+			</div>
+			<div class="project-card-wrapper">
+				<div class="project-card">
+					<div class="front">
+						<p>Card Six Front</p>
+					</div>
+					<div class="back">
+						<p>Card Six Back</p>
+					</div>
+				</div>
+			</div>
+			<div class="footer"></div>
 		</div>
 		<div class="spaceer"></div>
 	</div>
-
-	<script src="js/scripts.js"></script>
 </body>
 </html>
