Styling and add image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300,400" rel="stylesheet">
 
 	<title>Portfolio - Chris Fiorino CSS Grid</title>
 	<meta name="description" content="HTML Grid Layout">
@@ -38,7 +38,15 @@
 			<div class="project-card-wrapper">
 				<div class="project-card">
 					<div class="front">
-						<p>Card One Front</p>
+						<div class="card-top-section">
+							<div class="card-top-circle"></div>
+							<div class="card-front-title">
+								<p>Bartender At Home</p>
+							</div>
+						</div>
+						<div class="card-bottom-section">
+							<p>A spirit and cocktail recipe catalog. Users can login using OAuth2.0 to contribute to the database.</p>
+						</div>
 					</div>
 					<div class="back">
 						<p>Card One Back</p>
@@ -48,7 +56,10 @@
 			<div class="project-card-wrapper">
 				<div class="project-card">
 					<div class="front">
-						<p>Card Four Front</p>
+						<div class="card-title"><p>Bartender At Home</p></div>
+						<div class="card-description"><p>This app was created to better understand This app was created to better understand This app was created to better understand This app was created to better understand </p></div>
+						<div class="card-icons-holder"></div>
+						<div class="card-project-links"></div>
 					</div>
 					<div class="back">
 						<p>Card Four Back</p>
@@ -62,7 +73,7 @@
 			<div class="project-card-wrapper">
 				<div class="project-card">
 					<div class="front">
-						<div class="top-img"></div>
+						<div class="top-img bartender-at-home" style="background-image: url(images/bartenderAtHome.png)"></div>
 						<div class="bottom-text">
 							<p>Card Two Front</p>
 						</div>
