--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<div class="card-top-section">
 							<div class="card-top-circle database-icon"></div>
 							<div class="card-front-title">
-								<p>SQL Project</p>
+								<p>SQL Logs Analysis</p>
 							</div>
 						</div>
 						<div class="card-bottom-section">
@@ -84,23 +84,21 @@
 						</div>
 					</div>
 					<div class="back">
-						<div class="card-back-title"><p class="card-back-header">SQL Project</p></div>
-						<div class="card-back-description"><p>A spirit and cocktail recipe catalog. Users can login using OAuth2.0 to contribute to the database. A spirit and cocktail recipe catalog. Users can login using OAuth2.0 to contribute to the database.</p></div>
+						<div class="card-back-title"><p class="card-back-header">SQL Logs Analysis</p></div>
+						<div class="card-back-description"><p>Program written in Python, is designed to analyse data from the newsdata.sql file provided by Udacity. Program is run with a Vagrant - Virtual Machine to pull relevant data using PostgreSQL. README provides user instructions</p></div>
 						<div class="card-back-skills-row">
-							<p class="skill-box">SQL</p>
+							<p class="skill-box">PostgreSQL</p>
 							<p class="skill-box">Vagrant</p>
-							<p class="skill-box">Apache</p>
-							<p class="skill-box">OAuth</p>
+							<p class="skill-box">SQL</p>
 						</div>
 						<div class="card-back-skills-row">
-							<p class="skill-box">JSON</p>
 							<p class="skill-box">Python</p>
-							<p class="skill-box">AWS</p>
-							<p class="skill-box">CSS Grid</p>
+							<p class="skill-box">Virtual Machine</p>
+							<p class="skill-box">README</p>
 						</div>
 						<div class="card-back-bottom">
-							<a class="git-link" href="https://google.com/"><i class="fa fa-github" aria-hidden="true"></i><i class="fa fa-git" aria-hidden="true"></i></a>
-							<a class="project-link" href="https://github.com/chrisfio/"><p class="project-link-button">Project Page</p></a>
+							<a class="git-link" target="_blank" href="https://github.com/chrisfio/sql-project"><i class="fa fa-github" aria-hidden="true"></i><i class="fa fa-git" aria-hidden="true"></i></a>
+							<a class="project-link" target="_blank" href="https://github.com/sql-project"><p class="project-link-button">Demo</p></a>
 						</div>
 					</div>
 				</div>
@@ -124,7 +122,7 @@
 					</div>
 					<div class="back">
 						<div class="card-back-title"><p class="card-back-header">iOS/Android App</p></div>
-						<div class="card-back-description"><p>Built iOS and Android apps for RecordFixer.com through AnalytixBar. The application was built with JavaScript using Appcelerator Titanium. The backend is hosted on an AWS EC2 Ubuntu server built on a Django framework with PosgreSQL.</p></div>
+						<div class="card-back-description"><p>Built iOS and Android apps for RecordFixer.com through AnalytixBar. The application was built with JavaScript in Appcelerator Titanium Studio. The backend is hosted on an AWS EC2 Ubuntu server utilizing Django and PosgreSQL.</p></div>
 						<div class="card-back-skills-row">
 							<p class="skill-box">Django</p>
 							<p class="skill-box">JavaScript</p>
@@ -156,23 +154,20 @@
 						</div>
 					</div>
 					<div class="back">
-						<div class="card-back-title"><p class="card-back-header">Bartender At Home</p></div>
-						<div class="card-back-description"><p>A spirit and cocktail recipe catalog. Users can login using OAuth2.0 to contribute to the database. A spirit and cocktail recipe catalog. Users can login using OAuth2.0 to contribute to the database.</p></div>
+						<div class="card-back-title"><p class="card-back-header">Sciforma CSS Styling</p></div>
+						<div class="card-back-description"><p>Applied CSS styling to several pages for Sciforma.com's site redesign. Responsive styling was applied based on professional mockups and is now live on Sciforma.com. Layouts styled for mobile, tablet and desktop browsers.</p></div>
 						<div class="card-back-skills-row">
-							<p class="skill-box">AJAX</p>
-							<p class="skill-box">Python</p>
-							<p class="skill-box">HTML</p>
 							<p class="skill-box">CSS</p>
+							<p class="skill-box">Responsive</p>
+							<p class="skill-box">Git</p>
 						</div>
 						<div class="card-back-skills-row">
-							<p class="skill-box">SQL Alchemy</p>
-							<p class="skill-box">OAuth</p>
-							<p class="skill-box">Flask</p>
-							<p class="skill-box">JSON</p>
+							<p class="skill-box">BitBucket</p>
+							<p class="skill-box">Sublime</p>
 						</div>
 						<div class="card-back-bottom">
-							<a class="git-link" target="_blank" href="https://google.com/"><i class="fa fa-github" aria-hidden="true"></i><i class="fa fa-git" aria-hidden="true"></i></a>
-							<a class="project-link" target="_blank" href="https://github.com/chrisfio/"><p class="project-link-button">Project Page</p></a>
+							<a class="project-link-left" target="_blank" href="https://www.sciforma.com/about"><p class="project-link-button">About Us</p></a>
+							<a class="project-link" target="_blank" href="https://www.sciforma.com/customers/ppm-success-stories"><p class="project-link-button">Customers</p></a>
 						</div>
 					</div>
 				</div>
@@ -197,7 +192,7 @@
 					</div>
 					<div class="back">
 						<div class="card-back-title"><p class="card-back-header">Verbal Unit Converter</p></div>
-						<div class="card-back-description"><p>Built to allow a user to convert a unit of measurement into relative terms. Built with JavaScript and JSON by determining a base unit of measurement and relative base factor for every available unit of measurement.</p></div>
+						<div class="card-back-description"><p>Built to allow users to convert a unit of measurement into relative and easy to understand terms. Written in JavaScript and using JSON to determine a base unit of measurement and relative base factor for every available unit of measurement.</p></div>
 						<div class="card-back-skills-row">
 							<p class="skill-box">JavaScript</p>
 							<p class="skill-box">JSON</p>
@@ -230,22 +225,20 @@
 					</div>
 					<div class="back">
 						<div class="card-back-title"><p class="card-back-header">Personal Website</p></div>
-						<div class="card-back-description"><p>A spirit and cocktail recipe catalog. Users can login using OAuth2.0 to contribute to the database. A spirit and cocktail recipe catalog. Users can login using OAuth2.0 to contribute to the database.</p></div>
+						<div class="card-back-description"><p>Built to host my resume and timeline of experience in a creative format. This was also fun practice in building a website from scratch and hosting via AWS. Google Anlytics was added to track page views. Responsive design and styling.</p></div>
 						<div class="card-back-skills-row">
-							<p class="skill-box">AJAX</p>
-							<p class="skill-box">Python</p>
-							<p class="skill-box">HTML</p>
+							<p class="skill-box">JQuery</p>
+							<p class="skill-box">Google Analytics</p>
+						</div>
+						<div class="card-back-skills-row">
+							<p class="skill-box">AWS</p>
+							<p class="skill-box">JavaScript</p>
+							<p class="skill-box">Responsive</p>
 							<p class="skill-box">CSS</p>
 						</div>
-						<div class="card-back-skills-row">
-							<p class="skill-box">SQL Alchemy</p>
-							<p class="skill-box">OAuth</p>
-							<p class="skill-box">Flask</p>
-							<p class="skill-box">JSON</p>
-						</div>
 						<div class="card-back-bottom">
-							<a class="git-link" href="https://google.com/"><i class="fa fa-github" aria-hidden="true"></i><i class="fa fa-git" aria-hidden="true"></i></a>
-							<a class="project-link" href="https://github.com/chrisfio/"><p class="project-link-button">Project Page</p></a>
+							<a class="git-link" target="_blank" href="https://github.com/chrisfio/personalsite"><i class="fa fa-github" aria-hidden="true"></i><i class="fa fa-git" aria-hidden="true"></i></a>
+							<a class="project-link" target="_blank" href="http://chrisfiorino.com/"><p class="project-link-button">Project Page</p></a>
 						</div>
 					</div>
 				</div>
