Move image file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="wrapper">
 		<div class="sidebar">
 			<div class="side-top">
-				<img src="profile.jpg" alt="Profile Picture">
+				<img src="images/profile.jpg" alt="Profile Picture">
 			</div>
 			<div class="side-middle"></div>
 			<div class="spaceer"></div>
