Changed to styling and added favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
 	
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300,400" rel="stylesheet">
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107979778-2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
+	  gtag('config', 'UA-107979778-2');
+	</script>
+	
 	<title>Portfolio - Chris Fiorino CSS Grid</title>
 	<meta name="description" content="HTML Grid Layout">
 	<meta name="author" content="Chris Fiorino">
@@ -98,7 +109,6 @@
 						</div>
 						<div class="card-back-bottom">
 							<a class="git-link" target="_blank" href="https://github.com/chrisfio/sql-project"><i class="fa fa-github" aria-hidden="true"></i><i class="fa fa-git" aria-hidden="true"></i></a>
-							<a class="project-link" target="_blank" href="https://github.com/sql-project"><p class="project-link-button">Demo</p></a>
 						</div>
 					</div>
 				</div>
@@ -229,6 +239,7 @@
 						<div class="card-back-skills-row">
 							<p class="skill-box">JQuery</p>
 							<p class="skill-box">Google Analytics</p>
+							<p class="skill-box">SSL</p>
 						</div>
 						<div class="card-back-skills-row">
 							<p class="skill-box">AWS</p>
