Adding js for cardflip

--- a/index.html
+++ b/index.html
@@ -258,5 +258,8 @@
 		</div>
 		<div class="spaceer"></div>
 	</div>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
+	<script type="text/javascript" src="portfolio.js"></script>
 </body>
 </html>
