Changes to mobile page

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 	  gtag('config', 'UA-107979778-2');
 	</script>
 	
-	<title>Portfolio - Chris Fiorino CSS Grid</title>
+	<title>Chris Fiorino - Portfolio</title>
 	<meta name="description" content="HTML Grid Layout">
 	<meta name="author" content="Chris Fiorino">
 
-	<link rel="stylesheet" href="grid.css">
+	<link rel="stylesheet" href="css/grid.css">
 </head>
 
 <body>
@@ -260,6 +260,6 @@
 	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
-	<script type="text/javascript" src="portfolio.js"></script>
+	<script type="text/javascript" src="js/portfolio.js"></script>
 </body>
 </html>
