Add mobile styling and js

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
 	  gtag('config', 'UA-107979778-2');
 	</script>
+	<script type="text/javascript">
+		if (screen.width < 700){
+			document.location = "mobile.html";
+		}
+	</script>
 	
 	<title>Chris Fiorino - Portfolio</title>
 	<meta name="description" content="HTML Grid Layout">
@@ -61,10 +66,10 @@
 					</div>
 					<div class="back">
 						<div class="card-back-title"><p class="card-back-header">Bartender At Home</p></div>
-						<div class="card-back-description"><p>Built to demonstrate ability to build a full stack application, this is a Flask based CRUD web app hosted on an AWS Ubuntu machine using Apache with PosgreSQL. Layout built using CSS grid, login with OAuth2.0, and secured by Let's Encrypt</p></div>
+						<div class="card-back-description"><p>Created to demonstrate my ability to build a full stack application, this is a Flask based CRUD web app hosted on an AWS Ubuntu machine using Apache with PostgreSQL. Layout built using CSS grid, login with OAuth2.0, and secured by Let's Encrypt</p></div>
 						<div class="card-back-skills-row">
 							<p class="skill-box">Flask</p>
-							<p class="skill-box">PosgreSQL</p>
+							<p class="skill-box">PostreSQL</p>
 							<p class="skill-box">Apache</p>
 							<p class="skill-box">OAuth2.0</p>
 						</div>
@@ -132,11 +137,11 @@
 					</div>
 					<div class="back">
 						<div class="card-back-title"><p class="card-back-header">iOS/Android App</p></div>
-						<div class="card-back-description"><p>Built iOS and Android apps for RecordFixer.com through AnalytixBar. The application was built with JavaScript in Appcelerator Titanium Studio. The backend is hosted on an AWS EC2 Ubuntu server utilizing Django and PosgreSQL.</p></div>
+						<div class="card-back-description"><p>Built iOS and Android apps for RecordFixer.com through AnalytixBar. The application was built with JavaScript in Appcelerator Titanium Studio. The backend is hosted on an AWS EC2 Ubuntu server utilizing Django and MySQL.</p></div>
 						<div class="card-back-skills-row">
 							<p class="skill-box">Django</p>
 							<p class="skill-box">JavaScript</p>
-							<p class="skill-box">PosgreSQL</p>
+							<p class="skill-box">MySQL</p>
 						</div>
 						<div class="card-back-skills-row">
 							<p class="skill-box">JSON</p>
