Added 9 place (bars, restaurants, coffee houses) and functionality to put a marker for each one, bounce when clicked and info box

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<div class="card-back-description"><p>Created to demonstrate my ability to build a full stack application, this is a Flask based CRUD web app hosted on an AWS Ubuntu machine using Apache with PostgreSQL. Layout built using CSS grid, login with OAuth2.0, and secured by Let's Encrypt</p></div>
 						<div class="card-back-skills-row">
 							<p class="skill-box">Flask</p>
-							<p class="skill-box">PostreSQL</p>
+							<p class="skill-box">PostgreSQL</p>
 							<p class="skill-box">Apache</p>
 							<p class="skill-box">OAuth2.0</p>
 						</div>
@@ -150,7 +150,8 @@
 							<p class="skill-box">EC2</p>
 						</div>
 						<div class="card-back-bottom">
-							<p class="card-back-bottom-note">Source code private - App Store ETA Feb '18</p>
+							<a class="android-link" target="_blank" href="https://play.google.com/store/apps/details?id=com.analytixbar.recordfixer&hl=en"><i class="fa fa-android" aria-hidden="true"></i></a>
+							<a class="iphone-link" target="_blank" href="https://itunes.apple.com/us/app/record-fixer/id1355182883?mt=8"><i class="fa fa-apple" aria-hidden="true"></i></a>
 						</div>
 					</div>
 				</div>
