--- a/mobile.html
+++ b/mobile.html
@@ -120,8 +120,8 @@
 						<p class="skill-box">EC2</p>
 					</div>
 					<div class="project-links-bottom">
-						<a class="git-link" target="_blank" href="https://github.com/chrisfio/flask-crud-vagrantvm"><i class="fa fa-github" aria-hidden="true"></i><i class="fa fa-git" aria-hidden="true"></i></a>
-						<a class="project-link" target="_blank" href="http://bartenderapp.chrisfiorino.com"><p class="project-link-button">Project Page</p></a>
+						<a class="android-link" target="_blank" href="https://play.google.com/store/apps/details?id=com.analytixbar.recordfixer&hl=en"><i class="fa fa-android" aria-hidden="true"></i></a>
+						<a class="iphone-link" target="_blank" href="https://itunes.apple.com/us/app/record-fixer/id1355182883?mt=8"><i class="fa fa-apple" aria-hidden="true"></i></a>
 					</div>
 				</div>
 			</div>
